Update styles for risk levels in App.scss

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-.dark-orange {
+.medium-risk {
   background: #f28e05;
 
   h2 {
@@ -34,4 +34,51 @@
 
 .muted-text {
   color: #808080;
+}
+
+.high-risk {
+  background-color: #e9474e;
+
+  h2 {
+    button {
+      color: #fff;
+    }
+  }
+
+  .accordion-content {
+    padding: 10px;
+    border-radius: 5px;
+  }
+}
+
+.flex-two-column-row {
+  flex-direction: row;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.high-risk-border {
+  border-bottom: 1px solid #dbdbdb;
+  min-height: 81px;
+}
+
+.high-risk-img {
+  width: 37px;
+  height: 37px;
+}
+
+.low-risk {
+  background-color: #70b165;
+
+  h2 {
+    button {
+      color: #fff;
+    }
+  }
+
+  .accordion-content {
+    padding: 10px;
+    border-radius: 5px;
+  }
 }
