--- a/src/App.scss
+++ b/src/App.scss
@@ -51,6 +51,21 @@
   }
 }
 
+.confirmation {
+  background-color: #1099f2;
+
+  h2 {
+    button {
+      color: #fff;
+    }
+  }
+
+  .accordion-content {
+    padding: 10px;
+    border-radius: 5px;
+  }
+}
+
 .flex-two-column-row {
   flex-direction: row;
   display: flex;
@@ -124,4 +139,9 @@
     font-weight: bold;
     margin-top: 43px;
   }
+}
+
+.form-cta {
+  display: flex;
+  gap: 10px;
 }
