Update styles for risk levels and add new components in App.scss and App.tsx

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,10 +27,24 @@
   gap: 10px;
 }
 
+.substance-section {
+  .list-img {
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
+
+    .hazard-symbols {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+  }
+}
+
 .list-img {
   display: flex;
   gap: 15px;
-  flex-direction: column;
+  flex-direction: row;
 
   .hazard-symbols {
     display: flex;
@@ -201,4 +215,12 @@ li.data-item ul li {
   border-bottom: 1px solid #dbdbdb;
   padding-top: 25px;
   padding-bottom: 25px;
+}
+
+.box {
+  box-shadow: 0 3px 5px #0000000b;
+  background-color: #fff;
+  border: 1px solid #e2e8f0;
+  border-radius: 0.6rem;
+  position: relative;
 }
