Update styles for risk levels and add new components in App.scss and App.tsx

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 .medium-risk {
   background: #f28e05;
+  border-radius: 10px;
 
   h2 {
     button {
@@ -59,6 +60,7 @@
 
 .high-risk {
   background-color: #e9474e;
+  border-radius: 10px;
 
   h2 {
     button {
@@ -74,6 +76,7 @@
 
 .confirmation {
   background-color: #1099f2;
+  border-radius: 10px;
 
   h2 {
     button {
@@ -106,6 +109,7 @@
 
 .low-risk {
   background-color: #70b165;
+  border-radius: 10px;
 
   h2 {
     button {
